<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/side_nav_bar"
    tools:context=".ui.LoginActivity" >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_md"
        app:cardCornerRadius="@dimen/radius_md"
        app:cardElevation="@dimen/card_elevation"
        app:cardMaxElevation="@dimen/card_elevation" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_lg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/welcome"
                style="@style/TextViewTitleStyle"/>
            <EditText
                android:id="@+id/etLoginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:autofillHints="username"
                android:hint="@string/login_username"
                android:layout_marginTop="@dimen/margin_lg"
                android:drawableStart="@drawable/ic_login_username"
                style="@style/EditTextStyle" />
            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:layout_marginTop="@dimen/margin_lg"
                android:drawableStart="@drawable/ic_login_password"
                style="@style/EditTextStyle" />
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:layout_marginTop="@dimen/margin_lg"
                style="@style/ButtonStyle" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>