<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_md" >
    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/tvBottomSheetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/ibCloseBottomSheet"
            style="@style/TextViewTitleStyle"/>
        <ImageButton
            android:id="@+id/ibCloseBottomSheet"
            android:layout_width="@dimen/touch_target_size"
            android:layout_height="@dimen/touch_target_size"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/close_modal"
            android:background="@android:color/transparent" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlHeader">
        <TextView
            android:id="@+id/tvTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:labelFor="@id/etTaskName"
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/TextViewSubtitleStyle"/>
        <EditText
            android:id="@+id/etTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/margin_xs"
            style="@style/EditTextStyle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:labelFor="@id/etTaskDescription"
            android:layout_marginTop="@dimen/margin_sm"
            style="@style/TextViewSubtitleStyle"/>
        <EditText
            android:id="@+id/etTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/margin_xs"
            style="@style/EditTextStyle" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llContent">
        <Button
            android:id="@+id/btnDeleteTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delete_task"
            android:layout_marginEnd="@dimen/margin_xxs"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/btnUpdateTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_update_task"
            android:layout_marginStart="@dimen/margin_xxs"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/btnAddTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:visibility="gone"
            android:text="@string/btn_add_task"
            style="@style/ButtonStyle"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>